--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <hr>
     <!-- Section -->
      
-    <section class="hero" id="hero">
+    <section class="best-shop">
         <div class="hero-content" style="padding: 0px;">
             <img src="./JORDAN RETRO/jubilation.svg" alt="">
             <h1 class="display-4 fw-bold" id="hero-head" style="font-size: 50px; line-height: 70px;"> Best Shop for <br><span style="color: #0077b6;"> Best People </span></h1>
@@ -123,8 +123,8 @@
             </div>
         </div>
 
-        <div class="hero-image">
-            <img src="./JORDAN RETRO/imgi_8_offers-img.webp" alt="Hero Image" class="img-fluid" id="main-jordan">
+        <div>
+            <img src="./JORDAN RETRO/imgi_8_offers-img.webp" alt="Hero Image" class="img-fluid" width="500px">
         </div>
     </section>
     <hr>
